Añadir admin a la base de datos y meter los datos demo y no estáticos. Se ha comprobado que funcione todo.