@@ -1,18 +1,17 @@
 package com.generaction.backend.controller;
 
-import com.generaction.backend.entity.Solicitud;
 import com.generaction.backend.entity.Valoracion;
 import com.generaction.backend.repository.MayorRepository;
 import com.generaction.backend.repository.SolicitudRepository;
 import com.generaction.backend.repository.ValoracionRepository;
 import com.generaction.backend.repository.VoluntarioRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.ResponseEntity;
-import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/admin")
@@ -26,90 +25,92 @@ public class AdminController {
     private final ValoracionRepository valoracionRepository;
 
     @GetMapping("/stats")
-    @Transactional(readOnly = true)
-    public ResponseEntity<?> getStats() {
-        long totalMayores = mayorRepository.count();
-        long totalVoluntarios = voluntarioRepository.count();
-        long totalSolicitudes = solicitudRepository.count();
-        long pendientes = solicitudRepository.countByEstado(Solicitud.EstadoSolicitud.PENDIENTE);
-        long asignadas = solicitudRepository.countByEstado(Solicitud.EstadoSolicitud.ASIGNADA);
-        long enTramite = solicitudRepository.countByEstado(Solicitud.EstadoSolicitud.EN_TRAMITE);
-        long completadas = solicitudRepository.countByEstado(Solicitud.EstadoSolicitud.COMPLETADA);
-        long canceladas = solicitudRepository.countByEstado(Solicitud.EstadoSolicitud.CANCELADA);
-        long totalResenas = valoracionRepository.count();
+    public Map<String, Object> getStats() {
+        var mayores = mayorRepository.findAll();
+        var voluntarios = voluntarioRepository.findAll();
+        var solicitudes = solicitudRepository.findAll();
+        var resenas = valoracionRepository.findAll();
 
-        return ResponseEntity.ok(Map.of(
-            "totalMayores", totalMayores,
-            "totalVoluntarios", totalVoluntarios,
-            "totalSolicitudes", totalSolicitudes,
-            "solicitudesPorEstado", Map.of(
-                "PENDIENTE", pendientes,
-                "ASIGNADA", asignadas,
-                "EN_TRAMITE", enTramite,
-                "COMPLETADA", completadas,
-                "CANCELADA", canceladas
-            ),
-            "totalResenas", totalResenas
-        ));
+        Map<String, Long> solicitudesPorEstado = solicitudes.stream()
+                .collect(Collectors.groupingBy(
+                        s -> s.getEstado().name(),
+                        Collectors.counting()
+                ));
+
+        Map<String, Object> response = new HashMap<>();
+        response.put("totalMayores", mayores.size());
+        response.put("totalVoluntarios", voluntarios.size());
+        response.put("totalSolicitudes", solicitudes.size());
+        response.put("totalResenas", resenas.size());
+        response.put("solicitudesPorEstado", solicitudesPorEstado);
+
+        return response;
     }
 
     @GetMapping("/usuarios/mayores")
-    public ResponseEntity<?> getMayores() {
-        var mayores = mayorRepository.findAll().stream().map(m -> Map.<String, Object>of(
-            "id", m.getIdMayor(),
-            "nombre", m.getNombre() + " " + m.getApellidos(),
-            "email", m.getEmail(),
-            "municipio", m.getMunicipio(),
-            "telefono", m.getTelefono(),
-            "activo", m.getActivo()
-        )).toList();
-        return ResponseEntity.ok(mayores);
+    public List<Map<String, Object>> getMayores() {
+        return mayorRepository.findAll().stream().map(m -> {
+            Map<String, Object> item = new HashMap<>();
+            item.put("nombre", m.getNombre() + " " + m.getApellidos());
+            item.put("email", m.getEmail());
+            item.put("municipio", m.getMunicipio());
+            item.put("activo", m.getActivo());
+            return item;
+        }).collect(Collectors.toList());
     }
 
     @GetMapping("/usuarios/voluntarios")
-    public ResponseEntity<?> getVoluntarios() {
-        var voluntarios = voluntarioRepository.findAll().stream().map(v -> Map.<String, Object>of(
-            "id", v.getIdVoluntario(),
-            "nombre", v.getNombre() + " " + v.getApellidos(),
-            "email", v.getEmail(),
-            "municipio", v.getMunicipio(),
-            "telefono", v.getTelefono(),
-            "activo", v.getActivo(),
-            "verificado", v.getEstadoVerificacion(),
-            "puntos", v.getPuntosWallet()
-        )).toList();
-        return ResponseEntity.ok(voluntarios);
+    public List<Map<String, Object>> getVoluntarios() {
+        return voluntarioRepository.findAll().stream().map(v -> {
+            Map<String, Object> item = new HashMap<>();
+            item.put("nombre", v.getNombre() + " " + v.getApellidos());
+            item.put("email", v.getEmail());
+            item.put("municipio", v.getMunicipio());
+            item.put("puntos", v.getPuntosWallet());
+            item.put("verificado", v.getEstadoVerificacion() != null ? v.getEstadoVerificacion() : "pendiente");
+            return item;
+        }).collect(Collectors.toList());
     }
 
     @GetMapping("/solicitudes")
-    @Transactional(readOnly = true)
-    public ResponseEntity<?> getSolicitudes() {
-        var solicitudes = solicitudRepository.findAllWithMayor().stream().map(s -> Map.<String, Object>of(
-            "id", s.getIdSolicitud(),
-            "mayor", s.getMayor().getNombre() + " " + s.getMayor().getApellidos(),
-            "tipoActividad", s.getTipoActividad(),
-            "descripcion", s.getDescripcion() != null ? s.getDescripcion() : "",
-            "fechaSolicitada", s.getFechaSolicitada().toString(),
-            "horario", s.getHorario(),
-            "estado", s.getEstado().name(),
-            "fechaCreacion", s.getFechaCreacion().toString()
-        )).toList();
-        return ResponseEntity.ok(solicitudes);
+    public List<Map<String, Object>> getSolicitudes() {
+        return solicitudRepository.findAll().stream().map(s -> {
+            Map<String, Object> item = new HashMap<>();
+            item.put("tipoActividad", s.getTipoActividad());
+            item.put("estado", s.getEstado().name());
+            item.put("descripcion", s.getDescripcion());
+            item.put("fechaSolicitada", s.getFechaSolicitada() != null ? s.getFechaSolicitada().toString() : "");
+            item.put("horario", s.getHorario() != null ? s.getHorario() : "");
+            item.put("mayor", s.getMayor() != null
+                    ? s.getMayor().getNombre() + " " + s.getMayor().getApellidos()
+                    : "Sin mayor");
+            return item;
+        }).collect(Collectors.toList());
     }
 
     @GetMapping("/resenas")
-    @Transactional(readOnly = true)
-    public ResponseEntity<?> getResenas() {
-        var resenas = valoracionRepository.findAllWithDetails().stream().map(v -> Map.<String, Object>of(
-            "id", v.getIdValoracion(),
-            "autor", v.getRol() == Valoracion.RolValoracion.MAYOR
-                ? v.getVisita().getMayor().getNombre() + " " + v.getVisita().getMayor().getApellidos()
-                : v.getVisita().getVoluntario().getNombre() + " " + v.getVisita().getVoluntario().getApellidos(),
-            "rol", v.getRol().name(),
-            "puntuacion", v.getPuntuacion(),
-            "comentario", v.getComentario() != null ? v.getComentario() : "",
-            "fecha", v.getFechaValoracion().toString()
-        )).toList();
-        return ResponseEntity.ok(resenas);
+    public List<Map<String, Object>> getResenas() {
+        return valoracionRepository.findAll().stream().map(r -> {
+            Map<String, Object> item = new HashMap<>();
+
+            String autor = "Usuario";
+            if (r.getVisita() != null) {
+                if (r.getRol() == Valoracion.RolValoracion.MAYOR
+                        && r.getVisita().getMayor() != null) {
+                    autor = r.getVisita().getMayor().getNombre() + " " + r.getVisita().getMayor().getApellidos();
+                } else if (r.getRol() == Valoracion.RolValoracion.VOLUNTARIO
+                        && r.getVisita().getVoluntario() != null) {
+                    autor = r.getVisita().getVoluntario().getNombre() + " " + r.getVisita().getVoluntario().getApellidos();
+                }
+            }
+
+            item.put("autor", autor);
+            item.put("comentario", r.getComentario() != null ? r.getComentario() : "");
+            item.put("puntuacion", r.getPuntuacion());
+            item.put("fecha", r.getFechaValoracion() != null ? r.getFechaValoracion().toString() : "");
+            item.put("rol", r.getRol() != null ? r.getRol().name() : "MAYOR");
+
+            return item;
+        }).collect(Collectors.toList());
     }
 }
